--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.5",
     "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
+    "expo-linear-gradient": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.5.6",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-web": "~0.11.7"
+    "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.6.0",
+    "react-native-screens": "^2.0.0-alpha.12",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.3.1",
+    "react-navigation-drawer": "^2.4.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
