--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/stack": "^5.2.3",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-barcode-scanner": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
+    "expo-permissions": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
