--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-country-picker-modal": "^1.10.0",
+    "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-material-dropdown": "^0.11.1",
