--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-barcode-scanner": "^8.0.0",
+    "expo-camera": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
     "expo-permissions": "^8.0.0",
