--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.0.1",
     "react-navigation": "^4.3.1",
-    "react-navigation-drawer": "^2.4.5"
+    "react-navigation-drawer": "^2.4.5",
+    "expo-location": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
