--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
     "expo-permissions": "^8.0.0",
+    "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
