--- a/app.json
+++ b/app.json
@@ -31,7 +31,13 @@
         "xxhdpi": "./assets/drawable-xxhdpi/splash4.png",
         "xxxhdpi": "./assets/drawable-xxxhdpi/splash5.png",
         "resizeMode": "cover"
-      }
+      },
+      "packages" :"com.CovidRescue.CovidRescue",
+      "versionCode" : 1,
+      "permissions" : [],
+      "icons" : "./assets/Covid_logo.png"
+
+      
     },
 "ios": {
       "splash": {
