--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-paper": "^3.7.0",
     "react-native-phone-input": "^0.2.4",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-generator": "^1.1.2",
@@ -38,6 +39,8 @@
     "react-native-screens": "^2.0.0-alpha.12",
     "react-native-svg": "^12.0.3",
     "react-native-svg-charts": "^5.3.0",
+    "react-native-textinput-effects": "^0.5.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.0.1",
     "react-navigation": "^4.3.1",
