--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-permissions": "^8.0.0",
     "lodash": "^4.17.15",
     "native-base": "2.13.8",
+    "rambda": "^5.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
